--- a/index.html
+++ b/index.html
@@ -217,23 +217,27 @@
                     </div>
                     <div class="header__right">
                         <!--для незарегистрированного пользователя-->
-                        <!--<a href="#" class="btn btn__authorization">
+                        <div class="header__right header__authorization header__non-authorized">
+                           <a href="./authorization.html" class="btn btn__authorization">
                             <span class="btn__avatar">
                                 <img src="./image/paw.svg" alt="Аватар">
                             </span>
                             Гость
                         </a>
-                        <a href="#" class="btn btn__default">Вход</a>
-                        <a href="#" class="btn btn__default">Регистрация</a>-->
+                        <a href="./authorization.html" class="btn btn__default btn__auth">Вход</a>
+                        <a href="./registration.html" class="btn btn__default btn__register">Регистрация</a> 
+                        </div>
                         <!--для незарегистрированного пользователя-->
-                        <a href="#" class="btn btn__authorization">
+                        <div class="header__right header__authorized">
+                           <a href="#" class="btn btn__authorization">
                             <span class="btn__avatar">
                                 <img src="./image/avatar.jpg" alt="Аватар">
                             </span>
                             <span class="btn__counter">3</span>
                             @littlecattypaw
                         </a>
-                        <a href="#" class="btn btn__default btn__post">Добавить пост</a>
+                        <a href="#" class="btn btn__default btn__post">Добавить пост</a> 
+                        </div>
                     </div>
                 </div>
                 <nav>
@@ -7683,24 +7687,28 @@
                     </div>
                 </div>
                 <div class="header__right">
-                    <!--для незарегистрированного пользователя-->
-                    <!--<a href="#" class="btn btn__authorization">
-                        <span class="btn__avatar">
-                            <img src="./image/paw.svg" alt="Аватар">
-                        </span>
-                        Гость
-                    </a>
-                    <a href="#" class="btn btn__default">Вход</a>
-                    <a href="#" class="btn btn__default">Регистрация</a>-->
-                    <!--для незарегистрированного пользователя-->
-                    <a href="#" class="btn btn__authorization">
-                        <span class="btn__avatar">
-                            <img src="./image/avatar.jpg" alt="Аватар">
-                        </span>
-                        <span class="btn__counter">3</span>
-                        @littlecattypaw
-                    </a>
-                    <a href="#" class="btn btn__default btn__post">Добавить пост</a>
+                   <!--для незарегистрированного пользователя-->
+                        <div class="header__right header__authorization header__non-authorized">
+                           <a href="./authorization.html" class="btn btn__authorization">
+                            <span class="btn__avatar">
+                                <img src="./image/paw.svg" alt="Аватар">
+                            </span>
+                            Гость
+                        </a>
+                        <a href="./authorization.html" class="btn btn__default btn__auth">Вход</a>
+                        <a href="./registration.html" class="btn btn__default btn__register">Регистрация</a> 
+                        </div>
+                        <!--для незарегистрированного пользователя-->
+                        <div class="header__right header__authorized">
+                           <a href="#" class="btn btn__authorization">
+                            <span class="btn__avatar">
+                                <img src="./image/avatar.jpg" alt="Аватар">
+                            </span>
+                            <span class="btn__counter">3</span>
+                            @littlecattypaw
+                        </a>
+                        <a href="#" class="btn btn__default btn__post">Добавить пост</a> 
+                        </div>
                 </div>
             </div>
             <nav>
