--- a/forgot-password.html
+++ b/forgot-password.html
@@ -255,68 +255,22 @@
         </header>
         <main class="main">
             <div class="container">
-                <div class="authorization registration">
+                <div class="authorization forgot">
                     <div class="authorization__right">
                         <div class="header__logo">
                             <a href="./index.html"><img src="./image/logo.svg" alt="Котиндер логотип"></a>
                         </div>
-                        <h2 class="authorization__title registration__title">Регистрация</h2>
-                          <div class="registration__auth">
-        <div class="socials__auth_title">
-            Регистрация через социальные сети:
-        </div>
-        <ul class="list-reset socials__auth_list">
-            <li><a href="#" aria-label="Войти через Яндекс" class="btn btn__default socials__auth_link"><svg class="yandex" width="23" height="33" viewBox="0 0 23 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M22.4457 32.9303H16.7788V5.04396H14.2268C9.59189 5.04396 7.15247 7.36473 7.15247 10.7995C7.15247 14.6984 8.8413 16.4993 12.3128 18.8201L15.165 20.7324L6.9273 32.9303H0.772461L8.18454 22.032C3.92494 19.0057 1.52305 16.0908 1.52305 11.1151C1.52305 4.89543 5.89524 0.680908 14.1893 0.680908H22.4457V32.9303Z" fill="white"/>
-</svg></a></li>
-            <li><a href="#" aria-label="Войти через телеграм" class="btn btn__default socials__auth_link"><svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M2.48252 13.743C11.2017 9.41854 17.03 6.62344 19.9675 5.25225C28.267 1.34966 29.9922 0.664066 31.1113 0.611328C31.3444 0.611328 31.9039 0.664066 32.2769 0.980493C32.5567 1.24418 32.6499 1.61335 32.6966 1.87704C32.7432 2.14072 32.7898 2.72084 32.7432 3.19548C32.2769 8.522 30.3652 21.5482 29.3395 27.5076C28.9198 30.039 28.0805 30.8828 27.2879 30.9883C25.5627 31.1465 24.2105 29.6698 22.532 28.4569C19.9209 26.5056 18.4288 25.2926 15.8644 23.394C12.9269 21.1791 14.8386 19.9661 16.5171 18.0148C16.9368 17.4874 24.6302 9.62949 24.77 8.89116C24.77 8.78568 24.8167 8.46926 24.6302 8.31104C24.4437 8.15283 24.2105 8.20557 24.024 8.25831C23.7443 8.31104 19.5479 11.4753 11.3882 17.6984C10.1759 18.6476 9.1035 19.0695 8.12434 19.0695C7.05193 19.0695 5.00036 18.384 3.46168 17.8038C1.59662 17.1182 0.104566 16.7491 0.244445 15.5889C0.337699 15.0087 1.08372 14.3759 2.48252 13.743Z" fill="white"/>
-</svg></a></li>
-            <li><a href="#" aria-label="Войти через вконтакте" class="btn btn__default socials__auth_link"><svg width="37" height="23" viewBox="0 0 37 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M19.986 23.0007C7.72436 23.0007 0.73311 14.6112 0.446289 0.628644H6.61294C6.81012 10.8825 11.3276 15.2207 14.9128 16.117V0.628644H20.703V9.46631C24.2345 9.08986 27.9632 5.05644 29.218 0.610718H34.9903C34.5196 2.91204 33.5794 5.09157 32.2285 7.01315C30.8775 8.93473 29.1448 10.5571 27.1385 11.7788C29.3774 12.8931 31.3546 14.4695 32.9398 16.4038C34.5249 18.3381 35.682 20.5865 36.3347 23.0007H29.9709C28.6085 18.7521 25.2025 15.4537 20.703 15.0055V23.0007H20.0039H19.986Z" fill="white"/>
-</svg></a></li>
-        </ul>
-    </div>
+                        <h2 class="authorization__title">Забыли пароль?</h2>
+                        <div>Укажите e-mail для сброса пароля</div>
                         <form action="./js/server.php" method="POST" class="authorization__form">
-                            <div class="form__block">
-                               <label><span class="authorization__label">Имя</span>
-      <input type="text" id="name" placeholder="Иван" name="name" required>
+      <label><span class="authorization__label"></span>
+      <input type="email" id="email" placeholder="Ваш адрес почты" name="email" required>
     </label>
-    <label><span class="authorization__label">Фамилия</span>
-      <input type="text" id="surname" placeholder="Иванов" name="surname" required>
-    </label> 
-                            </div>
-      <label><span class="authorization__label">Электронная почта</span>
-      <input type="email" id="email" placeholder="example@mail.ru" name="email" required>
-    </label>
-      <label><span class="authorization__label">Придумайте пароль</span>
-      <div class="password-wrapper">
-        <input type="password" id="password" placeholder="Введите свой пароль" autocomplete="current-password" name="password" required>
-        <!-- SVG глазок; меняется по JS -->
-        <span class="eye-icon" id="togglePassword">
-          <!-- Открытый глаз SVG, скрыт по умолчанию -->
-          <svg id="eye-open" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#b9b9b9" viewBox="0 0 22 22" style="display:none;">
-            <path d="M11 4C6 4 2 9.13 2 11s4 7 9 7 9-5.13 9-7-4-7-9-7zm0 12c-4.74 0-8-4.5-8-5s3.26-5 8-5 8 4.5 8 5-3.26 5-8 5zm0-8a3 3 0 100 6 3 3 0 000-6z"/>
-          </svg>
-          <!-- Закрытый глаз SVG -->
-            <svg id="eye-closed" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M2.5 6.10691L3.78 4.83691L20.5 21.5569L19.23 22.8369L16.15 19.7569C15 20.1369 13.78 20.3369 12.5 20.3369C7.5 20.3369 3.23 17.2269 1.5 12.8369C2.19 11.0769 3.29 9.52691 4.69 8.29691L2.5 6.10691ZM12.5 9.83691C13.2956 9.83691 14.0587 10.153 14.6213 10.7156C15.1839 11.2782 15.5 12.0413 15.5 12.8369C15.5 13.1869 15.44 13.5269 15.33 13.8369L11.5 10.0069C11.81 9.89691 12.15 9.83691 12.5 9.83691ZM12.5 5.33691C17.5 5.33691 21.77 8.44691 23.5 12.8369C22.68 14.9169 21.29 16.7169 19.5 18.0269L18.08 16.5969C19.44 15.6569 20.56 14.3769 21.32 12.8369C19.67 9.47691 16.26 7.33691 12.5 7.33691C11.41 7.33691 10.34 7.51691 9.34 7.83691L7.8 6.30691C9.24 5.68691 10.83 5.33691 12.5 5.33691ZM3.68 12.8369C5.33 16.1969 8.74 18.3369 12.5 18.3369C13.19 18.3369 13.87 18.2669 14.5 18.1269L12.22 15.8369C10.79 15.6869 9.65 14.5469 9.5 13.1169L6.1 9.70691C5.11 10.5569 4.28 11.6169 3.68 12.8369Z" fill="#B9B9B9"/>
-          </svg>
-        </span>
-      </div>
-    </label>
-      <div class="remember-row">
-        <label class="checkbox">
-            <input type="checkbox" name="remember" value="Запомнить меня">
-                <span>Регистрируясь, вы соглашаетесь с нашей <a href="#">офертой</a> и <a href="#">политикой конфиденциальности</a></span>
-        </label>
-      </div>
-      <button type="submit" class="btn btn__default authorization__btn">Зарегистрироваться</button>
+      <button type="submit" class="btn btn__default authorization__btn">Восстановить</button>
     </form>
     <div class="registration__bottom">
         Уже есть учетная запись? <a href="./authorization.html" class="registration__link">Войти</a>
     </div>
-  
                     </div>
                 </div>
             </div>
