--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/libs.css">
     <link rel="stylesheet" href="./css/custom.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script defer src="./js/libs.js"></script>
     <script defer src="./js/custom.js"></script>
 </head>
@@ -847,7 +848,7 @@
                             <div class="index__posts">
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo1.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo1.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -924,7 +925,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo2.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo2.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1001,7 +1002,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1078,7 +1079,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1155,7 +1156,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1246,7 +1247,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo1.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo1.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1323,7 +1324,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo2.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo2.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1400,7 +1401,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1595,7 +1596,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo1.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo1.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1672,7 +1673,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo2.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo2.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -1749,7 +1750,7 @@
                                 </div>
                                 <div class="index__post">
                                     <div class="card">
-                                        <a href="#"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
+                                        <a data-fancybox href="#post"><img src="./image/photo3.jpg" alt="Dog" class="card-img"></a>
                                         <span class="card-user">
                                             <img src="./image/avatar.png" alt="User" class="user-avatar">
                                             <span class="user-name">@bobickdog</span>
@@ -7761,6 +7762,12 @@
                 <img src="./image/cat.jpg" alt="Черный Кот" />
             </div>
         </div>
+    </div>
+    <div id="post" style="display: none;">
+        <div class="post__img">
+            <img src="./image/post.jpg" alt="Питомец">
+        </div>
+        <div class="post__text"></div>
     </div>
 </body>
 
