--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="shortcut icon" type="image/svg" href="./image/favicon.png">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/libs.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
     <link rel="stylesheet" href="./css/custom.css">
     <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script defer src="./js/libs.js"></script>
     <script defer src="./js/custom.js"></script>
 </head>
@@ -7764,10 +7766,70 @@
         </div>
     </div>
     <div id="post" style="display: none;">
+    <div class="post__wrapper">
         <div class="post__img">
             <img src="./image/post.jpg" alt="Питомец">
         </div>
-        <div class="post__text"></div>
+        <div class="post__text">
+            <div class="post__text_wrapper">
+            <div class="post__text_top">
+                <div class="post__user">
+                    <img src="./image/avatar.png" alt="аватар" class="avatar-round">
+                    <span>@bukinbaron</span>
+                    <img src="./image/post.svg" alt="метка" class="avatar-metka">
+                </div>
+                <div>
+                    <span class="card-stars">
+                                                <span class="star active"><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M12.0004 18.2626L6.46711 21.596C6.22266 21.7515 5.96711 21.8182 5.70044 21.796C5.43377 21.7737 5.20044 21.6849 5.00044 21.5293C4.80044 21.3737 4.64488 21.1795 4.53377 20.9466C4.42266 20.7138 4.40044 20.4524 4.4671 20.1626L5.93377 13.8626L1.03377 9.62931C0.81155 9.42931 0.672883 9.20131 0.617772 8.9453C0.562661 8.68931 0.579105 8.43953 0.667105 8.19597C0.755105 7.95242 0.888438 7.75242 1.06711 7.59597C1.24577 7.43953 1.49022 7.33953 1.80044 7.29597L8.26711 6.72931L10.7671 0.795972C10.8782 0.529305 11.0507 0.329305 11.2844 0.195971C11.5182 0.0626382 11.7569 -0.00402832 12.0004 -0.00402832C12.244 -0.00402832 12.4827 0.0626382 12.7164 0.195971C12.9502 0.329305 13.1227 0.529305 13.2338 0.795972L15.7338 6.72931L22.2004 7.29597C22.5115 7.34042 22.756 7.44042 22.9338 7.59597C23.1115 7.75153 23.2449 7.95153 23.3338 8.19597C23.4227 8.44042 23.4395 8.69064 23.3844 8.94664C23.3293 9.20264 23.1902 9.43019 22.9671 9.62931L18.0671 13.8626L19.5338 20.1626C19.6004 20.4515 19.5782 20.7129 19.4671 20.9466C19.356 21.1804 19.2004 21.3746 19.0004 21.5293C18.8004 21.684 18.5671 21.7729 18.3004 21.796C18.0338 21.8191 17.7782 21.7524 17.5338 21.596L12.0004 18.2626Z" fill="#FFC422"></path>
+                                                    </svg></span>
+                                                <span class="star active"><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M12.0004 18.2626L6.46711 21.596C6.22266 21.7515 5.96711 21.8182 5.70044 21.796C5.43377 21.7737 5.20044 21.6849 5.00044 21.5293C4.80044 21.3737 4.64488 21.1795 4.53377 20.9466C4.42266 20.7138 4.40044 20.4524 4.4671 20.1626L5.93377 13.8626L1.03377 9.62931C0.81155 9.42931 0.672883 9.20131 0.617772 8.9453C0.562661 8.68931 0.579105 8.43953 0.667105 8.19597C0.755105 7.95242 0.888438 7.75242 1.06711 7.59597C1.24577 7.43953 1.49022 7.33953 1.80044 7.29597L8.26711 6.72931L10.7671 0.795972C10.8782 0.529305 11.0507 0.329305 11.2844 0.195971C11.5182 0.0626382 11.7569 -0.00402832 12.0004 -0.00402832C12.244 -0.00402832 12.4827 0.0626382 12.7164 0.195971C12.9502 0.329305 13.1227 0.529305 13.2338 0.795972L15.7338 6.72931L22.2004 7.29597C22.5115 7.34042 22.756 7.44042 22.9338 7.59597C23.1115 7.75153 23.2449 7.95153 23.3338 8.19597C23.4227 8.44042 23.4395 8.69064 23.3844 8.94664C23.3293 9.20264 23.1902 9.43019 22.9671 9.62931L18.0671 13.8626L19.5338 20.1626C19.6004 20.4515 19.5782 20.7129 19.4671 20.9466C19.356 21.1804 19.2004 21.3746 19.0004 21.5293C18.8004 21.684 18.5671 21.7729 18.3004 21.796C18.0338 21.8191 17.7782 21.7524 17.5338 21.596L12.0004 18.2626Z" fill="#FFC422"></path>
+                                                    </svg></span>
+                                                <span class="star active"><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M12.0004 18.2626L6.46711 21.596C6.22266 21.7515 5.96711 21.8182 5.70044 21.796C5.43377 21.7737 5.20044 21.6849 5.00044 21.5293C4.80044 21.3737 4.64488 21.1795 4.53377 20.9466C4.42266 20.7138 4.40044 20.4524 4.4671 20.1626L5.93377 13.8626L1.03377 9.62931C0.81155 9.42931 0.672883 9.20131 0.617772 8.9453C0.562661 8.68931 0.579105 8.43953 0.667105 8.19597C0.755105 7.95242 0.888438 7.75242 1.06711 7.59597C1.24577 7.43953 1.49022 7.33953 1.80044 7.29597L8.26711 6.72931L10.7671 0.795972C10.8782 0.529305 11.0507 0.329305 11.2844 0.195971C11.5182 0.0626382 11.7569 -0.00402832 12.0004 -0.00402832C12.244 -0.00402832 12.4827 0.0626382 12.7164 0.195971C12.9502 0.329305 13.1227 0.529305 13.2338 0.795972L15.7338 6.72931L22.2004 7.29597C22.5115 7.34042 22.756 7.44042 22.9338 7.59597C23.1115 7.75153 23.2449 7.95153 23.3338 8.19597C23.4227 8.44042 23.4395 8.69064 23.3844 8.94664C23.3293 9.20264 23.1902 9.43019 22.9671 9.62931L18.0671 13.8626L19.5338 20.1626C19.6004 20.4515 19.5782 20.7129 19.4671 20.9466C19.356 21.1804 19.2004 21.3746 19.0004 21.5293C18.8004 21.684 18.5671 21.7729 18.3004 21.796C18.0338 21.8191 17.7782 21.7524 17.5338 21.596L12.0004 18.2626Z" fill="#FFC422"></path>
+                                                    </svg></span>
+                                                <span class="star active"><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M12.0004 18.2626L6.46711 21.596C6.22266 21.7515 5.96711 21.8182 5.70044 21.796C5.43377 21.7737 5.20044 21.6849 5.00044 21.5293C4.80044 21.3737 4.64488 21.1795 4.53377 20.9466C4.42266 20.7138 4.40044 20.4524 4.4671 20.1626L5.93377 13.8626L1.03377 9.62931C0.81155 9.42931 0.672883 9.20131 0.617772 8.9453C0.562661 8.68931 0.579105 8.43953 0.667105 8.19597C0.755105 7.95242 0.888438 7.75242 1.06711 7.59597C1.24577 7.43953 1.49022 7.33953 1.80044 7.29597L8.26711 6.72931L10.7671 0.795972C10.8782 0.529305 11.0507 0.329305 11.2844 0.195971C11.5182 0.0626382 11.7569 -0.00402832 12.0004 -0.00402832C12.244 -0.00402832 12.4827 0.0626382 12.7164 0.195971C12.9502 0.329305 13.1227 0.529305 13.2338 0.795972L15.7338 6.72931L22.2004 7.29597C22.5115 7.34042 22.756 7.44042 22.9338 7.59597C23.1115 7.75153 23.2449 7.95153 23.3338 8.19597C23.4227 8.44042 23.4395 8.69064 23.3844 8.94664C23.3293 9.20264 23.1902 9.43019 22.9671 9.62931L18.0671 13.8626L19.5338 20.1626C19.6004 20.4515 19.5782 20.7129 19.4671 20.9466C19.356 21.1804 19.2004 21.3746 19.0004 21.5293C18.8004 21.684 18.5671 21.7729 18.3004 21.796C18.0338 21.8191 17.7782 21.7524 17.5338 21.596L12.0004 18.2626Z" fill="#FFC422"></path>
+                                                    </svg></span>
+                                                <span class="star"><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M12.0004 18.2626L6.46711 21.596C6.22266 21.7515 5.96711 21.8182 5.70044 21.796C5.43377 21.7737 5.20044 21.6849 5.00044 21.5293C4.80044 21.3737 4.64488 21.1795 4.53377 20.9466C4.42266 20.7138 4.40044 20.4524 4.4671 20.1626L5.93377 13.8626L1.03377 9.62931C0.81155 9.42931 0.672883 9.20131 0.617772 8.9453C0.562661 8.68931 0.579105 8.43953 0.667105 8.19597C0.755105 7.95242 0.888438 7.75242 1.06711 7.59597C1.24577 7.43953 1.49022 7.33953 1.80044 7.29597L8.26711 6.72931L10.7671 0.795972C10.8782 0.529305 11.0507 0.329305 11.2844 0.195971C11.5182 0.0626382 11.7569 -0.00402832 12.0004 -0.00402832C12.244 -0.00402832 12.4827 0.0626382 12.7164 0.195971C12.9502 0.329305 13.1227 0.529305 13.2338 0.795972L15.7338 6.72931L22.2004 7.29597C22.5115 7.34042 22.756 7.44042 22.9338 7.59597C23.1115 7.75153 23.2449 7.95153 23.3338 8.19597C23.4227 8.44042 23.4395 8.69064 23.3844 8.94664C23.3293 9.20264 23.1902 9.43019 22.9671 9.62931L18.0671 13.8626L19.5338 20.1626C19.6004 20.4515 19.5782 20.7129 19.4671 20.9466C19.356 21.1804 19.2004 21.3746 19.0004 21.5293C18.8004 21.684 18.5671 21.7729 18.3004 21.796C18.0338 21.8191 17.7782 21.7524 17.5338 21.596L12.0004 18.2626Z" fill="#CCCCCC"></path>
+                                                    </svg></span>
+                                            </span>
+                                        </div>
+            </div>
+            <div class="post__text_text">
+                <p>
+                    Барон Букин в очередной раз доказал, что он не только красивый и харизматичный пёс, но и настоящий чемпион. Его участие в соревнованиях стало настоящим событием: уверенное поведение, отличная подготовка и невероятный контакт с хозяином сделали своё дело — Барон выступил великолепно. На фото он гордо позирует с ленточками и медалью, которые получил за свою выдающуюся работу. В его глазах — радость и достоинство, а в осанке — уверенность победителя. 
+                </p>
+                <p>
+                    Это не просто удача, а результат ежедневного труда, любви и взаимопонимания между псом и человеком. Барон не первый раз принимает участие в подобных конкурсах, и каждый раз подтверждает свой высокий уровень. Зрители аплодировали стоя, а судьи не скрывали восхищения. Он стал настоящей звездой дня — харизматичный, воспитанный и грациозный. Для своего хозяина Барон — больше чем просто собака. Он верный друг, партнёр и источник вдохновения. Такие моменты, как этот — с кубком в лапах и ленточками на груди — становятся памятью на всю жизнь. Поздравляем Барона с заслуженной победой и желаем новых достижений на будущих соревнованиях!
+                </p>
+            </div>
+            <div class="post__text_comment"></div>
+            <div class="post__text_bottom">
+                <span class="card__buttons">
+                                                <button class="icon icon-heart"><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M4.08895 1.66379C1.64478 3.08829 -0.0748806 5.98045 0.000953674 9.35445C0.0954533 13.5661 3.37262 17.2808 8.95978 20.5988C9.78812 21.0911 10.6608 21.7293 11.6653 21.7293C12.6511 21.7293 13.5611 21.0795 14.372 20.5976C19.9568 17.2808 23.2351 13.565 23.3296 9.35445C23.4055 5.98045 21.6858 3.08945 19.2416 1.66379C16.955 0.332621 14.0826 0.324454 11.6653 2.29029C9.24795 0.324454 6.37562 0.331454 4.08895 1.66379ZM5.26378 3.68095C6.89012 2.73362 8.92245 2.76745 10.6818 4.54779C10.8108 4.67725 10.964 4.77997 11.1328 4.85006C11.3016 4.92014 11.4825 4.95622 11.6653 4.95622C11.848 4.95622 12.029 4.92014 12.1978 4.85006C12.3665 4.77997 12.5198 4.67725 12.6488 4.54779C14.4081 2.76745 16.4405 2.73362 18.0668 3.68095C19.7515 4.66329 21.0535 6.74695 20.9963 9.30429C20.931 12.2338 18.6163 15.364 13.1796 18.5933C12.7036 18.8768 12.2066 19.2396 11.6653 19.3901C11.124 19.2396 10.627 18.8768 10.151 18.5933C4.71428 15.364 2.39962 12.235 2.33429 9.30312C2.27595 6.74812 3.57912 4.66329 5.26378 3.68095Z" fill="#B9B9B9"></path>
+                                                    </svg></button>
+                                                <button class="icon icon-comment"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.083 0.149007C12.5537 0.00186679 14.9925 0.765581 16.938 2.29559C18.8834 3.82561 20.2005 6.01575 20.6398 8.45146C21.0475 10.7114 20.6733 13.0372 19.5881 15.0491L20.7353 18.8437C20.8598 19.2554 20.7476 19.7021 20.4435 20.0063C20.1394 20.3104 19.6926 20.4225 19.2809 20.298L15.4864 19.1509C13.4745 20.236 11.1486 20.6102 8.88872 20.2026C6.453 19.7632 4.26287 18.4462 2.73285 16.5007C1.20284 14.5553 0.439123 12.1164 0.586263 9.64576C0.733404 7.17512 1.78119 4.84414 3.53129 3.09404C5.2814 1.34393 7.61238 0.296148 10.083 0.149007ZM15.4956 4.12968C13.9988 2.95257 12.1225 2.36501 10.2217 2.47821C8.32096 2.59142 6.52764 3.39752 5.18121 4.74395C3.83478 6.09038 3.02867 7.88371 2.91547 9.78448C2.80227 11.6853 3.38983 13.5616 4.56693 15.0583C5.74404 16.555 7.42901 17.5683 9.30291 17.9063C11.1768 18.2443 13.1096 17.8836 14.7355 16.8924C15.0189 16.7196 15.3626 16.6758 15.6804 16.7719L17.8716 17.4343L17.2091 15.2431C17.113 14.9253 17.1569 14.5817 17.3297 14.2982C18.3208 12.6724 18.6815 10.7396 18.3435 8.86565C18.0055 6.99175 16.9923 5.30678 15.4956 4.12968Z" fill="#B9B9B9"></path>
+                                                    </svg></button>
+                                                <button class="icon icon-send"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M20.3836 0.510886C20.1629 0.291748 19.8861 0.137694 19.5835 0.0656563C19.2809 -0.00638151 18.9644 0.00638497 18.6686 0.102553L1.60027 5.79589C1.28371 5.89619 1.00399 6.08805 0.796417 6.34724C0.588846 6.60643 0.46274 6.92132 0.434028 7.25214C0.405315 7.58296 0.475283 7.91487 0.635096 8.20595C0.794908 8.49702 1.0374 8.73421 1.33193 8.88755L8.4136 12.3876L11.9136 19.4926C12.0543 19.7707 12.2695 20.0042 12.5353 20.1669C12.8011 20.3297 13.1069 20.4153 13.4186 20.4142H13.5353C13.869 20.3896 14.1877 20.2652 14.4499 20.0572C14.712 19.8491 14.9055 19.567 15.0053 19.2476L20.7803 2.22589C20.8834 1.93181 20.9009 1.61449 20.8306 1.31087C20.7604 1.00725 20.6054 0.72982 20.3836 0.510886ZM2.3236 7.40589L17.2219 2.43589L8.95027 10.7076L2.3236 7.40589ZM13.5003 18.5709L10.1869 11.9442L18.4586 3.67255L13.5003 18.5709Z" fill="#B9B9B9"></path>
+                                                    </svg></button>
+                                            </span>
+                                            <span class="card-likes">
+                                            142 отметок "Нравится"
+                                        </span>
+                                        <span class="post__date">25 июнь 2022 г.</span>
+            </div>
+            <div class="post__add">
+
+            </div>
+            </div>
+        </div>
+        </div>
     </div>
 </body>
 
