--- a/person.html
+++ b/person.html
@@ -703,7 +703,7 @@
                         <div class="tabs__content_right">
                             <div class="mobile-filter">
                                 <div class="pat__name">
-                                    <img src="./image/pat.jpg" alt="Федеров Николай Васильевич">
+                                    <img src="./image/person-round.jpg" alt="Федеров Николай Васильевич">
                                    <h3 class="tabs__content_title">Федеров Николай Васильевич</h3> 
                                    <div>@fedyaNickolas</div>
                                 </div>
@@ -718,7 +718,7 @@
                             </div>
                             <div class="pet__top">
                                 <div class="pet__top_image">
-                                    <img src="./image/baron.jpg" alt="Федеров Николай Васильевич">
+                                    <img src="./image/person.jpg" alt="Федеров Николай Васильевич">
                                     <span class="card-stars__wrapper">
                                         <span class="text-gray">Статус VIP</span>
                                             <span class="card-stars">
