--- a/person.html
+++ b/person.html
@@ -764,9 +764,9 @@
                                         <div><span class="text-gray">Животные: </span><a href="№" class="info__owner">кошки</a><a href="№" class="info__owner"> собаки</a></div>
                                             <div><span class="text-gray">Тип пользователя: </span>Волонтёр</div>
                                             <div><span class="text-gray">Экспертность: </span>Хирург</div>
-                                            <div><span class="text-gray">Количнство животных: </span>4</div>
+                                            <div><span class="text-gray">Количество животных: </span>4</div>
                                     </div>
-                                    <div class="pet__about">
+                                    <div class="pet__about" style="margin-bottom: auto;">
                                         Человек, который совмещает профессию хирурга с волонтёрской деятельностью. Спасает не только жизни людей, но и даёт шанс на новую жизнь бездомным животным. Всегда открыт для общения и сотрудничества, чтобы сделать мир чуточку добрее.
                                     </div>
                                     <div class="pet__button">
