--- a/person.html
+++ b/person.html
@@ -766,7 +766,7 @@
                                             <div><span class="text-gray">Экспертность: </span>Хирург</div>
                                             <div><span class="text-gray">Количество животных: </span>4</div>
                                     </div>
-                                    <div class="pet__about" style="margin-bottom: auto;">
+                                    <div class="pet__about">
                                         Человек, который совмещает профессию хирурга с волонтёрской деятельностью. Спасает не только жизни людей, но и даёт шанс на новую жизнь бездомным животным. Всегда открыт для общения и сотрудничества, чтобы сделать мир чуточку добрее.
                                     </div>
                                     <div class="pet__button">
