--- a/person.html
+++ b/person.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/custom.css">
     <script defer src="./js/libs.js"></script>
     <script defer src="./js/custom.js"></script>
+    <script src="https://api-maps.yandex.ru/v3/?apikey=b898f3d0-62e4-48ec-a278-730ba8e1afdf&lang=ru_RU" type="text/javascript">
+    </script>
 </head>
 
 <body class="">
@@ -781,6 +783,15 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="person__info">
+                                <div class="person__info_search">
+                                    <div class="person__info_map">
+                                        
+                                    </div>
+                                </div>
+                                <div class="person__info_calendar"></div>
+                                <div class="person__info_donat"></div>
                             </div>
                             <div class="index__tabs">
                         <div class="index__tabs_wrapper">
