--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                     Поиск
                                 </button>
                                 <input type="search" name="q" placeholder="Введите имя питомца или название мероприятия"
-                                    class="index__search_input">
+                                    class="index__search_input index__search_input-cutMob">
                             </form>
                         </div>
                     </div>
